--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
   "author": "Yanto Hariyono",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.20.0",
-    "express": "^4.17.1",
-    "express-fileupload": "^1.2.0",
+    "axios": "^1.6.8",
+    "express": "^4.19.2",
     "express-validator": "^6.9.2",
     "http": "0.0.1-security",
     "mime-types": "^2.1.32",
+    "multer": "^1.4.5-lts.1",
+    "puppeteer": "^22.6.5",
     "qrcode": "^1.4.4",
-    "socket.io": "2.3.0",
-    "whatsapp-web.js": "latest"
+    "qrcode-terminal": "^0.12.0",
+    "socket.io": "^4.7.5",
+    "uuid": "^9.0.1",
+    "whatsapp-web.js": "^1.23.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
